--- a/Front_end_assignment/Menuboard.html
+++ b/Front_end_assignment/Menuboard.html
@@ -52,8 +52,14 @@
         width :150px;
         margin : 0 auto;
       }
-      p.d {
+      p.button {
         font-weight: bold;
+        background-color : white;
+        color : darkslateblue;
+        width : 70px;
+        height : 30px;
+        float : right;
+        margin-top : 70px;
       }
 
     body{
@@ -75,12 +81,13 @@
         </div>
 
         <div id=menu1 style="width : 384px ;margin: 0 auto">
-            <p class="menu">감자튀김</p>
+            <p class="menu">Fried Potato</p>
 
             <br>
             <img src="fries.jpg" alt="감자튀김" width="200" height="200">
+            <p class=" button">Detail</p>
             <br>
-            <p class="much">3000원</p>
+            <p class="much">3000</p>
 
 
 
@@ -88,14 +95,24 @@
 
 
         <div id=menu2 style="width : 384px ; margin :0 auto">
-            <p class="menu">슬러시</p>
+            <p class="menu">slush</p>
 
             <br>
             <img src="sluch.jpg" alt="슬러시" width="200" height="200">
+            <p class=" button">Detail</p>
             <br>
-            <p class="much">2000원</p>
+            <p class="much">2000</p>
 
+        </div>
 
+        <div id=menu3 style="width : 384px ; margin :0 auto">
+            <p class="menu">chicken</p>
+
+            <br>
+            <img src="chicken.png" alt="슬러시" width="200" height="200">
+            <p class=" button">Detail</p>
+            <br>
+            <p class="much">9000</p>
 
         </div>
 
