--- a/Front_end_assignment/Menuboard.html
+++ b/Front_end_assignment/Menuboard.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 
-    <title>CSS</title>
+    <title>Menuboard</title>
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif&display=swap" rel="stylesheet"> 
     <style>
 
@@ -68,6 +68,23 @@
         overflow:auto;
     }
 
+    #botton1{
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+            margin-right:-4px;
+            margin-top:50px;
+            border: 1px solid blueviolet;
+            background-color: white;
+            color: blueviolet;
+            padding: 5px;
+            float:right;
+            font-family: 'Bree Serif', serif;
+            font-weight:bold;
+            font-size:30px;
+        }
+       
+
+
 
     </style>
     </head>
@@ -85,7 +102,7 @@
 
             <br>
             <img src="fries.jpg" alt="감자튀김" width="200" height="200">
-            <p class=" button">Detail</p>
+            <botton id="botton1" value="버튼" onclick="location.href='Menu_fri.html'">Detail</botton>
             <br>
             <p class="much">3000</p>
 
@@ -99,7 +116,7 @@
 
             <br>
             <img src="sluch.jpg" alt="슬러시" width="200" height="200">
-            <p class=" button">Detail</p>
+            <botton id="botton1" value="버튼" onclick="location.href='naver.com'">Detail</botton>
             <br>
             <p class="much">2000</p>
 
@@ -110,7 +127,7 @@
 
             <br>
             <img src="chicken.png" alt="슬러시" width="200" height="200">
-            <p class=" button">Detail</p>
+            <botton id="botton1" value="버튼" onclick="location.href='naver.com'">Detail</botton>
             <br>
             <p class="much">9000</p>
 
