디테일 추가
ㅈㄱㄴ

--- a/Front_end_assignment/Menuboard.html
+++ b/Front_end_assignment/Menuboard.html
@@ -116,7 +116,7 @@
 
             <br>
             <img src="sluch.jpg" alt="슬러시" width="200" height="200">
-            <botton id="botton1" value="버튼" onclick="location.href='naver.com'">Detail</botton>
+            <botton id="botton1" value="버튼" onclick="location.href='slush.html'">Detail</botton>
             <br>
             <p class="much">2000</p>
 
@@ -127,7 +127,7 @@
 
             <br>
             <img src="chicken.png" alt="슬러시" width="200" height="200">
-            <botton id="botton1" value="버튼" onclick="location.href='naver.com'">Detail</botton>
+            <botton id="botton1" value="버튼" onclick="location.href='chicken.html'">Detail</botton>
             <br>
             <p class="much">9000</p>
 
