백버튼 추가
뒤로가기 누르기 귀찮다.

--- a/Front_end_assignment/Menu_fri.html
+++ b/Front_end_assignment/Menu_fri.html
@@ -41,7 +41,22 @@
             p.explain{
                 font-size: 20px
 
+
             }
+            #botton1{
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+            margin-right:-4px;
+            margin-top:50px;
+            border: 1px solid blueviolet;
+            background-color: white;
+            color: blueviolet;
+            padding: 5px;
+            float:right;
+            font-family: 'Bree Serif', serif;
+            font-weight:bold;
+            font-size:30px;
+        }
     </style>
 
 </head>
@@ -51,9 +66,10 @@
 
     
     <div style="width : 1000px;margin:auto">
-    <img src="fries.jpg" alt="감자튀김">
-     <br>
-      <p class="explain">Fried potato is delicious.</p>
+        <img src="fries.jpg" alt="감자튀김">
+        <br>
+        <p class="explain">Fried potato is delicious.</p>
+        <botton id="botton1" value="버튼" onclick="location.href='Menuboard.html'" style=" margin: 0 auto">Back</botton>
     </div>
     
 </body>
