--- a/Front_end_assignment/chicken.html
+++ b/Front_end_assignment/chicken.html
@@ -42,6 +42,20 @@
             p.explain {
                 font-size: 20px
             }
+             #botton1{
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+            margin-right:-4px;
+            margin-top:50px;
+            border: 1px solid blueviolet;
+            background-color: white;
+            color: blueviolet;
+            padding: 5px;
+            float:right;
+            font-family: 'Bree Serif', serif;
+            font-weight:bold;
+            font-size:30px;
+        }
     </style>
 
 </head>
@@ -54,7 +68,11 @@
         <img src="chicken.png" alt="슬러시">
         <br>
         <p class="explain">chicken is always correct answer.</p>
+        <botton id="botton1" value="버튼" onclick="location.href='Menuboard.html'" style=" margin: 0 auto">Back</botton>
+
     </div>
+
+
 
 </body>
 </html>
