--- a/Front_end_assignment/3/mainpage.html
+++ b/Front_end_assignment/3/mainpage.html
@@ -84,21 +84,42 @@
                         <table border = "0">
                             <tr>
                                 <td colspan="2">5집</td>
+                                <td>  </td>
                                 <td colspan="2">6집</td>
+                                <td>  </td>
                                 <td colspan="2">7집</td>
+                                <td>  </td>
                                 <td>special</td>
+                                <td>  </td>
                                 <td colspan="2">8집</td>
                             </tr>
                             <tr>
                                 <td><img src = "kyhd.jpg" width = "100" height="100"></td>
                                 <td><img src = "imanga.jpg" width = "100" height="100"></td>
+                                <td width = "50px">  </td>
                                 <td><img src = "catchme.jpg" width = "100" height="100"></td>
                                 <td><img src = "humanoids.jpg" width = "100" height="100"></td>
+                                <td width = "50px">     </td>
                                 <td><img src = "tense.jpg" width = "100" height="100"></td>
                                 <td><img src = "surisuri.jpg" width = "100" height="100"></td>
+                                <td width = "50px">    </td>
                                 <td><img src = "rag.jpg" width = "100" height="100"></td>
+                                <td width = "50px">   </td>
                                 <td><img src = "destiny.jpg" width = "100" height="100"></td>
                                 <td><img src = "truth.jpg" width = "100" height="100"></td>
+
+                            </tr>
+                            <tr>
+                                <td colspan = "2">2011.01.05</td>
+                                <td>     </td>
+                                <td colspan = "2">2012.09.24</td>
+                                <td>     </td>
+                                <td colspan = "2">2014.01.04</td>
+                                <td>     </td>
+                                <td>2015.07.20</td>
+                                <td>     </td>
+                                <td colspan = "2">2018.03.28<br>2018.12.26</td>
+                                <td>     </td>
 
                             </tr>
                         </table>
